NETPOL/pods/NetPol_ingress-egress_deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-ingress-egress-deny-all
  #namespace: default
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector: {}
